# nockchain-wallet-tui

./: .env.example  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: rust.yml
src/: README.md  actions.rs  app_state.rs  clipboard.rs  command_runner.rs  create_tx.rs  ct_dispatch.rs  event_loop.rs  format.rs  lib.rs  main.rs  msg.rs  paste.rs  prompt_overlay.rs  screens.rs  send_simple.rs  session.rs  session_client.rs
src/components/: ambient.rs  balance_sidebar.rs  block_wordmark.rs  button.rs  create_tx_panel.rs  home.rs  home_tabs.rs  loading.rs  menus.rs  mod.rs  nns_buy.rs  price.rs  prompt_bar.rs  receive.rs  root.rs  scroll.rs  send_simple_panel.rs  splash.rs  theme.rs
src/docs/: api-curl.txt
src/handlers/: error.rs  home.rs  input.rs  menus.rs  mod.rs  nns_buy.rs  prompts.rs  receive.rs  send_simple.rs
src/hooks/: events.rs  logging.rs  mod.rs  terminal.rs
src/nns/: mod.rs
src/store/: action.rs  apply.rs  mod.rs
src/view/: mod.rs
src/wallet_api/: auth.rs  client.rs  executor.rs  mod.rs  normalize.rs  report.rs  server.rs  state.rs
