[package]
name = "nockchain-wallet-tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interactive terminal UI for nockchain-wallet"

[lib]
name = "nockchain_wallet_tui"
path = "src/lib.rs"

[[bin]]
name = "nockchain-wallet-tui"
path = "src/main.rs"

[dependencies]
rustls = "0.23.0"
arboard = "3.3"
axum = "0.8.1"
bs58 = "0.5.1"
clap = { version = "4.4.4", features = ["derive", "cargo"] }
crossterm = "0.29"
dotenvy = "0.15"
getrandom = { version = "0.3.3", features = ["std"] }
hex = "0.4"
http = "1"
nockapp = { git = "https://github.com/nocktoshi/nockchain", branch = "dev" }
nockapp-grpc = { git = "https://github.com/nocktoshi/nockchain", branch = "dev" }
nockchain-types = { git = "https://github.com/nocktoshi/nockchain", branch = "dev" }
nockchain-wallet = { git = "https://github.com/nocktoshi/nockchain", branch = "dev" }
ratatui = "0.29.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.32", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "rt", "signal", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
wallet-tx-builder = { git = "https://github.com/nocktoshi/nockchain", branch = "dev" }

[build-dependencies]
dotenvy = "0.15"